<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    tools:context=".LoginActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loginImageOne"
            android:layout_width="215dp"
            android:layout_height="131dp"
            android:background="@drawable/vector_logo_imdb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_user"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/loginImageOne"
            app:layout_constraintTop_toBottomOf="@+id/loginImageOne" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEtUser"
            android:layout_width="319dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/style_border"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/loginTvUser"
            app:layout_constraintTop_toBottomOf="@+id/loginTvUser"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_tv_pass"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/loginEtUser"
            app:layout_constraintTop_toBottomOf="@+id/loginEtUser" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEtPass"
            android:layout_width="319dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/style_border"
            android:backgroundTint="@color/white"
            android:inputType="textWebPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/loginTvPass"
            app:layout_constraintTop_toBottomOf="@+id/loginTvPass"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/login_tv_forgotten_pass"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/loginEtPass"
            app:layout_constraintTop_toBottomOf="@+id/loginEtPass" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtnLogin"
            android:layout_width="319dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/buttonEmptyText"
            android:text="@string/buttonText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="@+id/loginTvForget"
            app:layout_constraintTop_toBottomOf="@+id/loginTvForget" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvOtherOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login_other_options"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/loginBtnLogin"
            app:layout_constraintStart_toStartOf="@+id/loginBtnLogin"
            app:layout_constraintTop_toBottomOf="@+id/loginBtnLogin" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/loginFabApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:minHeight="48dp"
            android:src="@drawable/vector_logo_apple"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/loginFabFacebook"
            app:layout_constraintEnd_toStartOf="@id/loginFabFacebook"
            app:layout_constraintTop_toTopOf="@+id/loginFabFacebook"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/login_button_apple" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/loginFabGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/vector_logo_google"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/loginFabFacebook"
            app:layout_constraintStart_toEndOf="@id/loginFabFacebook"
            app:layout_constraintTop_toTopOf="@id/loginFabFacebook"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/login_button_google" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/loginFabFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/vector_logo_facebook"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/loginTvOtherOptions"
            app:layout_constraintStart_toStartOf="@id/loginTvOtherOptions"
            app:layout_constraintTop_toBottomOf="@id/loginTvOtherOptions"
            app:tint="@null"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="@string/login_button_face" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_tv_not_registered"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/loginFabApple"
            app:layout_constraintTop_toBottomOf="@+id/loginFabApple" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_register"
            android:textColor="@color/black"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/loginTvAsk"
            app:layout_constraintEnd_toEndOf="@+id/loginFabGoogle"
            app:layout_constraintStart_toEndOf="@+id/loginTvAsk"
            app:layout_constraintTop_toTopOf="@+id/loginTvAsk" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTvInvited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continued_as_invited"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/loginTvAsk"
            app:layout_constraintEnd_toEndOf="@+id/loginTvRegister"
            app:layout_constraintTop_toBottomOf="@+id/loginTvAsk" />

    </androidx.constraintlayout.widget.ConstraintLayout>